# gpf-algorithm

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt
include/gpf/: bbox.hpp  mesh_property.hpp  mesh_upkeep.hpp  orthtree.hpp  project_polylines_on_mesh.hpp  triangulation.hpp
tests/: main.cpp  read_off.hpp  test_mesh_edge_collapse.cpp  test_mesh_property.cpp  test_orthtree.cpp  test_project_polylines_on_mesh.cpp  test_triangulation.cpp
